--- a/react/public/index.html
+++ b/react/public/index.html
@@ -8,7 +8,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/react/manifest.json">
+    <link rel="manifest" href="%PUBLIC_URL%/react/build/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/react/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
